5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2506.log
== TEST (2019-05-13 22:23:39) 
-- CODE:
qi=int(input("quantidade de inicial: "))
pc=int(input("percentual de crescimento: "))/100
qv=int(input("quantidade para venda: "))
a=0
while(qi>0 and qi<12000):
	qt=qt+(qt*pc)-qv
	a=a+1
if(qt<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qt=qt+(qt*pc)-qv
NameError: name 'qt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:25:09) 
-- CODE:
qi=int(input("quantidade de inicial: "))
pc=int(input("percentual de crescimento: "))/100
qv=int(input("quantidade para venda: "))
a=0
while(qi>0 and qi<12000):
	qi=qi+(qi*pc)-qv
	a=a+1
if(qi<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
-- OUTPUT:
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:25:43) 
-- CODE:
qi=int(input("quantidade de inicial: "))
pc=int(input("percentual de crescimento: "))/100
qv=int(input("quantidade para venda: "))
a=0
while(qi>0 and qi<12000):
	qi=qi+(qi*pc)-qv
	a=a+1
	print(a)
if(qi<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:26:13) 
-- CODE:
qi=int(input("quantidade de inicial: "))
pc=int(input("percentual de crescimento: "))/100
qv=int(input("quantidade para venda: "))
a=0
while(qi>0 and qi<12000):
	qi=qi+(qi*pc)-qv
	a=a+1
	
if(qi<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:27:04) 
-- CODE:
qi=int(input("quantidade de inicial: "))
pc=int(input("percentual de crescimento: "))/100
qv=int(input("quantidade para venda: "))
a=0
while(qi>0 and qi<12000):
	qi=qi+(qi*pc)-qv
	a=a+1
	
if(qi<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.223064
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:06:26) 
-- CODE:
qi=int(input("quantidade de tambaquis: "))
pc=int(input("percentual de tambaquis: "))/100
v=int(input("retirados pra venda: "))
a=0
while(qui>0 and qi<12000):
	qi=(qi+(qi*pc))-v
	a=a+1
	if(qi<0):
		mensagem="EXTINCAO"
	else:
		mensagem="LIMITE"
		
	print(mensagem)
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(qui>0 and qi<12000):
NameError: name 'qui' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:06:59) 
-- CODE:
qi=int(input("quantidade de tambaquis: "))
pc=int(input("percentual de tambaquis: "))/100
v=int(input("retirados pra venda: "))
a=0
while(qi>0 and qi<12000):
	qi=(qi+(qi*pc))-v
	a=a+1
	if(qi<0):
		mensagem="EXTINCAO"
	else:
		mensagem="LIMITE"
		
	print(mensagem)
print(a)
	
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:07:43) 
-- CODE:
qi=int(input("quantidade de tambaquis: "))
pc=int(input("percentual de tambaquis: "))/100
v=int(input("retirados pra venda: "))
a=0
while(qi>0 and qi<12000):
	qi=(qi+(qi*pc))-v
	a=a+1
	if(qi<0):
		mensagem="EXTINCAO"
	else:
		mensagem="LIMITE"
		
	print(mensagem)
print(a)
	
-- EXECUTION TIME:
0.153171
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
LIMITE
LIMITE
LIMITE
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:07:58) 
-- CODE:
qi=int(input("quantidade de tambaquis: "))
pc=int(input("percentual de tambaquis: "))/100
v=int(input("retirados pra venda: "))
a=0
while(qi>0 and qi<12000):
	qi=(qi+(qi*pc))-v
	a=a+1
	if(qi<0):
		mensagem="EXTINCAO"
	else:
		mensagem="LIMITE"
		
print(mensagem)
print(a)
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:08:05) 
-- CODE:
qi=int(input("quantidade de tambaquis: "))
pc=int(input("percentual de tambaquis: "))/100
v=int(input("retirados pra venda: "))
a=0
while(qi>0 and qi<12000):
	qi=(qi+(qi*pc))-v
	a=a+1
	if(qi<0):
		mensagem="EXTINCAO"
	else:
		mensagem="LIMITE"
		
print(mensagem)
print(a)
	
-- EXECUTION TIME:
0.222489
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
